--- a/.bazelrc
+++ b/.bazelrc
@@ -5,8 +5,9 @@ startup --batch
 
 # Similarly, we need to workaround sandboxing issues:
 #   https://github.com/bazelbuild/bazel/issues/418
-build  --verbose_failures --spawn_strategy=standalone --genrule_strategy=standalone
-test --spawn_strategy=standalone
+build  --verbose_failures 
+build --spawn_strategy=remote --genrule_strategy=remote --remote_http_cache=https://storage.googleapis.com/if-bazel-cache --google_credentials=/conf/cache_credentials.json
+test --spawn_strategy=remote --genrule_strategy=remote --remote_http_cache=https://storage.googleapis.com/if-bazel-cache --google_credentials=/conf/cache_credentials.json
 
 # Force bazel output to use colors (good for jenkins) and print useful errors.
 common --color=yes
