--- a/.bazelrc
+++ b/.bazelrc
@@ -3,14 +3,11 @@
 # The easiest solution is to set up a bazelrc file forcing --batch.
 startup --batch
 
-# Similarly, we need to workaround sandboxing issues:
-#   https://github.com/bazelbuild/bazel/issues/418
 build --disk_cache=
 build --verbose_failures 
-build --spawn_strategy=remote --genrule_strategy=remote --remote_http_cache=https://storage.googleapis.com/if-bazel-cache --google_credentials=/conf/cache_credentials.json
-
-test --spawn_strategy=remote --genrule_strategy=remote --remote_http_cache=https://storage.googleapis.com/if-bazel-cache --google_credentials=/conf/cache_credentials.json
+build --remote_http_cache=https://storage.googleapis.com/if-bazel-cache --google_credentials=/conf/cache_credentials.json
 test --disk_cache=
+test --remote_http_cache=https://storage.googleapis.com/if-bazel-cache --google_credentials=/conf/cache_credentials.json
 
 # Force bazel output to use colors (good for jenkins) and print useful errors.
 common --color=yes
